
Version 0.7-1 (??-???-2011, Rev. ???)
=====================================

- The GUI will (optionally) look for a newer version of 
  gMCP on CRAN.
  
Version 0.7-0 (26-Aug-2011, Rev. 964)
=====================================

- Package "graph" is no longer a dependency.
  Class definition of graphMCP has changed and is no
  longer a subclass of graphNEL. The function
  gMCP:::updateGraphToNewClassDefinition(object)
  is provided to update old serialized (saved) objects.
  The GUI will use this function on its own if necessary.

- Also not longer a dependency: gtools, xtable, MCPAN

- New dependency: lattice graphics for power simulations

- Due to S4-methods and the optional "graph" package a lot
  of renaming has taken place:
  addEdge -> setEdge, edgeData -> edgeAttr, 
  nodeData -> nodeAttr, nodes -> getNodes 

- Power simulation code from our third author
  Bjoern Bornkamp.

- New example graphs:

  - general and simple Successive Graphs
  - fixedSequence
  - Fallback Procedure
  - Truncated Holm (special case)
  - BauerEtAl2001
  - HuqueAloshEtBhore2011
  - BretzEtAl2009a/b/c

- Renaming of older example graphs to simpler names.

- CI dialog is modal.

- LaTeX-Code can be shown in Dialog and does not have 
  to be saved in a file.

- PValues can be attached to graphMCP objects as an 
  attribute "pvalues".
  
- Function graphGUI has a new parameter:
  experimentalFeatures=FALSE
  Set this to TRUE for experimental features like the following: 

- Power analysis in GUI.

- Code for adaptive procedures (marked as experimental).

 85 files changed, 2152 insertions(+), 1663 deletions(-)
  
    
Version 0.6-6 (04-Jul-2011, Rev. 860)
=====================================

- Fixed a bug in the GUI that deleted often p-values.

- Adjusted p-values are calculated also in the parametric case.

- Graphs without epsilon edges can be processed by a
  much faster procedure written in C.
  
- matrix2graph & graph2matrix deal better with variable edges.
